crates/ddlog-syntax/tests/validation/fail/double_extern_function.rast
ROOT@0..83
  COMMENT@0..50 "// kind:item validate ..."
  WHITESPACE@50..51 "\n"
  ITEM@51..83
    FUNCTION_DEF@51..83
      ATTRIBUTES@51..51
      MODIFIERS@51..64
        EXTERN@51..57 "extern"
        WHITESPACE@57..58 " "
        EXTERN@58..64 "extern"
      WHITESPACE@64..65 " "
      FUNCTION@65..73 "function"
      WHITESPACE@73..74 " "
      FUNCTION_NAME@74..77
        IDENT@74..77 "foo"
      FUNCTION_ARGS@77..79
        L_PAREN@77..78 "("
        R_PAREN@78..79 ")"
      WHITESPACE@79..80 " "
      BLOCK@80..82
        L_CURLY@80..81 "{"
        R_CURLY@81..82 "}"
      WHITESPACE@82..83 "\n"
--
Error: received multiple 'extern' modifiers where one was expected
   ,-[validation/fail/double_extern_function.dl:2:8]
   |
 2 | extern extern function foo() {}
   : ^^^|^^ ^^^|^^  
   :    `----------- first 'extern' given here
   :           |    
   :           `---- functions can only have a single 'extern' modifier
---'
--
// kind:item validate:true pass:false ignore:false
extern extern function foo() {}
